               to use correctly.
20070625 code: reimplementation of array, including array_catn with a
               common core.
20070626 code: added dqueue.
20070708 code: added dir_walk.
20070711 code: fixed bug in array_index. calling array_index(&a, 0) on
               a zero length array will return a pointer to the first,
               nonexistant element. this is not dangerous in the sense
               that it does not access unallocated memory, but it is
               obviously incorrect.
20070727 version: corelib 0.57
20070727 code: correct dir_walk test.
20070803 code: added dir_name_r and base_name_r. dir_name and base_name are
               now compatibility wrappers around these functions.
20070803 code: added dealloc_null.
20070803 code: added dstack.
20070916 code: dir_array now takes void * argument to comparison function.
               structure contains new void pointer for passing user data to
               comparison functions.
20070922 code: now using 4096 instead of PATH_MAX due to idiotic portability
               problems associated with this constant.
20070928 code: changed dir_array API to what it should have been right from
               the beginning. backwards compat has been mercilessly killed.
20071001 code: added *_ZERO macros to all interfaces that appear to need them.
20071120 code: scan_double and scan_float scanned one byte less than necessary
               when scanning negative floating point numbers.
20070727 version: corelib 0.58
20080115 code: updated inst-check.c
20080223 code: removed sysinfo.c, included _sysinfo.h in corelib-conf.c
20080311 code: updated dir related tests to create empty directories.
20081204 code: updated installer.
20090226 code: updated installer.
20090226 code: updated sysdeps.
20090403 code: removed semicolons from fmt_pad.h macros for Sun C's stricter
               semantic checking ("statement not reached"). removed unreachable
               statements.