@@ -1,1 +1,0 @@
-Detection of host byte ordering.
