@@ -1,2 +1,0 @@
-<endianness>      ::= "big" | "little"
-<endianness-spec> ::= "sd-byteorder:" <endianness>
